* External URL: (trivial) remove useless assignment
* Dialer: signaling termination to the process group could result in 
  subprocesses terminating before receiving shutdown requests, which in turn 
  caused HubProcess to hang waiting for an answer that will never come. Fixed.
* Dialer: fix broken Do Not Call check for outgoing calls by checking whether
  phone number appears in DNC at time of call. Fixes Elastix bug #1178.
* Campaign Out: do not allow creation of campaigns with 0 retries.
* Agent Console: expose selection of attended call transfer via "atxfercall"
  command.
* Dialer: fix broken recovery on database loss due to dangling connection in
  configuration object.
* Campaign Out: fix failed creation of new campaign with no external URL.
* Campaign Out: allow free-format text as custom context. Fixes Elastix bug 
  #1168.
* Agent Console: fix opening of blank page when receiving call in campaign that
  does not have an external URL defined.
* Dialer (ECCP): new requirement "atxfercall" that invokes the "atxfer" AMI 
  action.
* Campaign Out: Add Failure Code and Failure Cause to CSV report. This reports
  the failure cause reported when a call attempt failed.
* Dialer: init script MUST specify signal to send to shutdown process. Otherwise
  killproc timeouts and sends SIGKILL to monitor process.
* Agent Console: add support for opening external URLs for a connected call.
  External URLs can be opened in three different ways: as a new window, as an
  embedded frame inside a tab in the agent console, or as a JSONP call that 
  loads and executes Javascript in the context of the agent console.
* Campaign In: add support for linking external URLs to a campaign.
* Campaign Out: add support for linking external URLs to a campaign.
* Dialer (ECCP): extend "getcampaigninfo" request to report external URLs
* External URL: new module for management of external URLs to be opened on each
  connected call.