@@ -32,20 +32,13 @@ require_once "libs/paloSantoDB.class.php";
 require_once "libs/paloSantoGrid.class.php";
 require_once "libs/misc.lib.php";
 
-if (!function_exists('_tr')) {
-    function _tr($s)
-    {
-        global $arrLang;
-        return isset($arrLang[$s]) ? $arrLang[$s] : $s;
-    }
-}
+require_once "modules/agent_console/libs/elastix2.lib.php";
 
 function _moduleContent(&$smarty, $module_name)
 {  
     include_once "modules/$module_name/configs/default.conf.php";
     include_once "modules/$module_name/libs/paloSantoReportsBreak.class.php";
 
-    global $arrLang;
     global $arrConf;
     $arrConf = array_merge($arrConf,$arrConfModule);
     // Obtengo la ruta del template a utilizar para generar el filtro.
@@ -53,19 +46,7 @@ function _moduleContent(&$smarty, $module_name)
     $templates_dir=(isset($arrConf['templates_dir']))?$arrConf['templates_dir']:'themes';
     $local_templates_dir="$base_dir/modules/$module_name/".$templates_dir.'/'.$arrConf['theme'];
 
-    // Obtengo el idioma actual utilizado en la aplicacion.
-    $Language = get_language();
-    // Include language file for EN, then for local, and merge the two.
-    $arrLangModule = NULL;
-    include_once("modules/$module_name/lang/en.lang");
-    $arrLangModule_file="modules/$module_name/lang/$Language.lang";
-    if (file_exists("$base_dir/$arrLangModule_file")) {
-        $arrLanEN = $arrLangModule;
-        include_once($arrLangModule_file);
-        $arrLangModule = array_merge($arrLanEN, $arrLangModule);
-    }
-    $arrLang = array_merge($arrLang, $arrLangModule);
-
+    load_language_module($module_name);
 
     // Abrir conexión a la base de datos
     $pDB = new paloDB($arrConf['dsn_conn_database']);
@@ -88,13 +69,13 @@ function _moduleContent(&$smarty, $module_name)
 
     switch($action){
         default:
-            $content = reportReportsBreak($smarty, $module_name, $local_templates_dir, $pDB, $arrConf, $arrLangModule, $arrLang);
+            $content = reportReportsBreak($smarty, $module_name, $local_templates_dir, $pDB);
             break;
     }
     return $content;
 }
 
-function reportReportsBreak($smarty, $module_name, $local_templates_dir, &$pDB, $arrConf, $arrLangModule, $arrLang)
+function reportReportsBreak($smarty, $module_name, $local_templates_dir, &$pDB)
 {
     // Obtener rango de fechas de consulta. Si no existe, se asume día de hoy
     $sFechaInicio = date('d M Y');
@@ -236,7 +217,7 @@ function reportReportsBreak($smarty, $module_name, $local_templates_dir, &$pDB, 
         }
         if ($bExportando)
             return $oGrid->fetchGridCSV($arrGrid, $arrData);
-        $sContenido = $oGrid->fetchGrid($arrGrid, $arrData, $arrLang);
+        $sContenido = $oGrid->fetchGrid($arrGrid, $arrData);
         if (strpos($sContenido, '<form') === FALSE)
             $sContenido = "<form  method=\"POST\" style=\"margin-bottom:0;\" action=\"$url\">$sContenido</form>";
         return $sContenido;
