@@ -1,3 +1,4 @@
+* Reports Break: some cleanup on language loading
 * External URL: (trivial) remove useless assignment
 * Dialer: signaling termination to the process group could result in 
   subprocesses terminating before receiving shutdown requests, which in turn 
